# dartcv

./: .clang-format  .gitignore  CMakeLists.txt  DartCvIOS.podspec  DartCvMacOS.podspec  README.md
.github/workflows/: 3rd_lib.yaml  android.yaml  apple.yaml  linux.yaml  windows.yaml
cmake/: download_setup_opencv.cmake
dartcv/: CMakeLists.txt  calib3d.h  contrib.h  core.h  dnn.h  features2d.h  gapi.h  highgui.h  imgcodecs.h  imgproc.h  objdetect.h  photo.h  stitching.h  video.h  videoio.h
dartcv/calib3d/: calib3d.cpp  calib3d.h  calib3d_async.cpp  calib3d_async.h  stereo.cpp  stereo.h
dartcv/contrib/: CMakeLists.txt  aruco.cpp  aruco.h  aruco_async.cpp  aruco_async.h  img_hash.cpp  img_hash.h  img_hash_async.cpp  img_hash_async.h  quality.cpp  quality.h  quality_async.cpp  quality_async.h  wechat_qrcode.cpp  wechat_qrcode.h  wechat_qrcode_async.cpp  wechat_qrcode_async.h  ximgproc.cpp  ximgproc.h  ximgproc_async.cpp  ximgproc_async.h  xobjdetect.cpp  xobjdetect.h
dartcv/core/: core.cpp  core.h  core_async.cpp  core_async.h  exception.h  logging.cpp  logging.h  lut.hpp  mat.cpp  mat.h  stdvec.cpp  stdvec.h  svd.cpp  svd.h  svd_async.cpp  svd_async.h  types.h  utils.cpp  vec.hpp  version.cpp  version.h
dartcv/dnn/: CMakeLists.txt  dnn.cpp  dnn.h  dnn_async.cpp  dnn_async.h
dartcv/features2d/: features2d.cpp  features2d.h  features2d_async.cpp  features2d_async.h  utils.hpp
dartcv/gapi/: gapi.cpp  gapi.h
dartcv/highgui/: highgui.cpp  highgui.h
dartcv/imgcodecs/: imgcodecs.cpp  imgcodecs.h  imgcodecs_async.cpp  imgcodecs_async.h
dartcv/imgproc/: imgproc.cpp  imgproc.h  imgproc_async.cpp  imgproc_async.h
dartcv/objdetect/: objdetect.cpp  objdetect.h  objdetect_async.cpp  objdetect_async.h
dartcv/photo/: photo.cpp  photo.h  photo_async.cpp  photo_async.h
dartcv/stitching/: stitching.cpp  stitching.h  stitching_async.cpp  stitching_async.h
dartcv/test/: calib3d.cc  core.cc  dnn.cc  imgcodecs.cc  imgproc.cc  vec.cc  video.cc
dartcv/video/: video.cpp  video.h  video_async.cpp  video_async.h
dartcv/videoio/: videoio.cpp  videoio.h  videoio_async.cpp  videoio_async.h
include/: aruco.h  aruco_async.h  calib3d.h  core.h  dnn.h  dnn_async.h  features2d.h  features2d_async.h  gapi.h  highgui.h  img_hash.h  imgcodecs.h  imgcodecs_async.h  imgproc.h  logging.h  objdetect.h  objdetect_async.h  photo.h  photo_async.h  quality.h  quality_async.h  stitching.h  svd.h  svd_async.h  t.h  video.h  videoio.h  videoio_async.h  wechat_qrcode.h  ximgproc.h  xobjdetect.h
scripts/: build_freetype.sh  build_harfbuzz.sh  update_include.sh
src/: CMakeLists.txt
test/: CMakeLists.txt  calib3d.cc  core.cc  dnn.cc  highgui.cc  imgcodecs.cc  imgproc.cc  vec.cc  video.cc
